fix scrollbar taking up space

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -79,3 +79,7 @@ a {
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+body {
+  overflow-y: scroll;
+}
